--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.0",
     "reactstrap": "5.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typeface": "^0.0.0",
     "typeface-lobster": "^0.0.72",
     "typeface-poppins": "^0.0.72"
