--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gotu": "^1.0.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^6.3.1",
     "react-popper": "0.9.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
